<resources>
    <string name="app_name">Atid</string>

    <string name="title_home">قضا</string>
    <string name="title_dashboard">تقویم</string>
    <string name="title_notifications">اوقات شرعی</string>
    <string name="title_texts">متون مذهبی</string>
    <string name="label_religious_texts">زیارت‌ها، ادعیه و احادیث</string>

    <string name="label_total_outstanding">مجموع نماز و روزه قضای باقی‌مانده</string>
    <string name="label_qada_prayers">نماز‌های قضا</string>
    <string name="label_qada_fast">روزه قضا</string>
    <string name="qada_fajr">نماز صبح</string>
    <string name="qada_zohr">نماز ظهر</string>
    <string name="qada_asr">نماز عصر</string>
    <string name="qada_maghrib">نماز مغرب</string>
    <string name="qada_isha">نماز عشا</string>
    <string name="qada_fast_row">روزه</string>

    <string name="label_next_month">ماه بعد</string>
    <string name="label_prev_month">ماه قبل</string>

    <string name="label_prayer_times">اوقات شرعی امروز</string>
    <string name="label_use_my_location">استفاده از موقعیت مکانی من</string>
    <string name="label_fajr">اذان صبح</string>
    <string name="label_sunrise">طلوع آفتاب</string>
    <string name="label_dhuhr">اذان ظهر</string>
    <string name="label_asr">اذان عصر</string>
    <string name="label_sunset">غروب آفتاب</string>
    <string name="label_maghrib">اذان مغرب</string>
    <string name="label_isha">اذان عشا</string>

    <string name="notification_channel_name">تاریخ و اوقات شرعی</string>
    <string name="notification_channel_description">نمایش دائمی تاریخ روز و اوقات شرعی در نوار اعلان‌ها</string>
    <string name="notification_times_line">صبح %1$s • طلوع %2$s • ظهر %3$s • عصر %4$s • غروب %5$s • مغرب %6$s • عشا %7$s</string>
</resources>
