<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ir.mhdolatabadi.atid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ir.mhdolatabadi.atid.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ir.mhdolatabadi.atid.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_texts"
        android:name="ir.mhdolatabadi.atid.ui.texts.TextsFragment"
        android:label="@string/title_texts"
        tools:layout="@layout/fragment_texts">
        <action
            android:id="@+id/action_texts_to_detail"
            app:destination="@id/navigation_text_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_text_detail"
        android:name="ir.mhdolatabadi.atid.ui.texts.TextDetailFragment"
        android:label="@string/title_texts"
        tools:layout="@layout/fragment_text_detail">
        <argument
            android:name="textId"
            app:argType="string" />
    </fragment>
</navigation>
